--- a/src/Portfolio.Tests/Portfolio.Tests.csproj
+++ b/src/Portfolio.Tests/Portfolio.Tests.csproj
@@ -18,11 +18,6 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="appsettings*.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="../Portfolio.Api/Portfolio.Api.csproj" />
+    <ProjectReference Include="..\Portfolio.Api\Portfolio.Api.csproj" />
   </ItemGroup>
 </Project>
