--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,55 +1,28 @@
-version : 2.1
-
-commands:
-  codecov:
-    parameters:
-      file:
-        type: string
-    steps:
-      - run:
-          name: Download Codecov script
-          command: curl -s https://codecov.io/bash > ./codecov
-      - run:
-          name: Make Codecov script executable
-          command: chmod +x ./codecov
-      - run:
-          name: Send coverage report
-          command: ./codecov -f << parameters.file >> -t $CODECOV_TOKEN
-
-executors:
-  ubuntu:
-    machine:
-      image: circleci/classic:latest
-
+version: 2
 jobs:
-  build_api:
-    parameters:
-      api_base_dir:
-        type: string
-      api_tests_dir:
-        type: string
-      dotnet_version:
-        type: string
-    executor: ubuntu
-    working_directory: ~/project
+  build:
+    docker:
+      - image: jetcipher/circleci-dotnet-core:3.0
     steps:
-      - checkout:
-          path: ~/project
-      - run: sudo sysctl -n -w fs.inotify.max_user_instances=512
-      - run: ./tools/install-dotnet.sh << parameters.dotnet_version >>
-      - run: ./tools/test.sh
-      - codecov:
-          file: << parameters.api_tests_dir >>/coverage/opencover.xml
-      - store_artifacts:
-          path: << parameters.api_tests_dir >>/coverage/report/summary.htm
-          destination: << parameters.api_base_dir >>/coverage-report.htm
-
-workflows:
-  version: 2.1
-  rest_api:
-    jobs:
-      - build_api:
-          name: build-rest-api
-          api_base_dir: src/Portfolio.Api
-          api_tests_dir: src/Portfolio.Tests
-          dotnet_version: "3.1.100"
+      - checkout
+      - run:
+          name: Restore
+          command: dotnet restore
+          working_directory: src/Portfolio.Api
+      - run:
+          name: Build
+          command: dotnet build -c Release
+          working_directory: src/Portfolio.Api
+      - run:
+          name: Running Tests
+          command: dotnet test
+          working_directory: src/Portfolio.Tests
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          name: Build and push Docker image
+          command: |
+            docker build -t Portfolio .
+            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
+            docker tag boku herocod3r/Portfolio
+            docker push herocod3r/Portfolio
