--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,29 @@
 version : 2.1
 
-executors:
-  ubuntu:
-    machine:
-      image: circleci/classic:latest
-
 jobs:
-  test:
-    description: Setup and run application tests
-    steps:
-      - checkout
-      - run:
-          name: "Install project dependencies"
-          command: dotnet restore
-      - run:
-          name: "Run Application Tests"
-          command: dotnet test
   build:
-    description: Build application with Release configuration
+    docker:
+      - image: jetcipher/circleci-dotnet-core:3.0
     steps:
       - checkout
       - run:
-          name: "Build Application according to some given configuration"
-          command: dotnet build
-workflows:
-  test_and_build:
-    jobs:
-      - test
-      - build:
-          requires:
-            - test
+          name: Restore
+          command: dotnet restore
+          working_directory: Portfolio.Api
+      - run:
+          name: Build
+          command: dotnet build -c Release
+          working_directory: Portfolio.Api
+      - run:
+          name: Running Tests
+          command: dotnet test
+          working_directory: Portfolio.Tests
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          name: Build and push Docker image
+          command: |
+            docker build -t Portfolio .
+            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
+            docker tag boku herocod3r/Portfolio
+            docker push herocod3r/Portfolio
