--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version : 2.1
 jobs:
   build:
     docker:
-      - image: mcr.microsoft.com/dotnet/core/sdk:6.0
+      - image: mcr.microsoft.com/dotnet/aspnet:6.0
     steps:
       - checkout
       - run:
