--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,55 @@
 version : 2.1
 
-jobs:
-  build:
-    docker:
-      - image: mcr.microsoft.com/dotnet/core/sdk:3.1.416
+commands:
+  codecov:
+    parameters:
+      file:
+        type: string
     steps:
-      - checkout
       - run:
-          name: Restore Packages API
-          command: dotnet restore
-          working_directory: src/Portfolio.Api
+          name: Download Codecov script
+          command: curl -s https://codecov.io/bash > ./codecov
       - run:
-          name: Restore Packages Tests
-          command: dotnet restore
-          working_directory: src/Portfolio.Tests
+          name: Make Codecov script executable
+          command: chmod +x ./codecov
       - run:
-          name: Run Tests
-          command: dotnet test
-          working_directory: src/Portfolio.Tests
-      - run:
-          name: Run Build
-          command: dotnet build
-          working_directory: src/Portfolio.Api
+          name: Send coverage report
+          command: ./codecov -f << parameters.file >> -t $CODECOV_TOKEN
+
+executors:
+  ubuntu:
+    machine:
+      image: circleci/classic:latest
+
+jobs:
+  build_api:
+    parameters:
+      api_base_dir:
+        type: string
+      api_tests_dir:
+        type: string
+      dotnet_version:
+        type: string
+    executor: ubuntu
+    working_directory: ~/project
+    steps:
+      - checkout:
+          path: ~/project
+      - run: sudo sysctl -n -w fs.inotify.max_user_instances=512
+      - run: ./tools/install-dotnet.sh << parameters.dotnet_version >>
+      - run: ./tools/test.sh
+      - codecov:
+          file: << parameters.api_tests_dir >>/coverage/opencover.xml
+      - store_artifacts:
+          path: << parameters.api_tests_dir >>/coverage/report/summary.htm
+          destination: << parameters.api_base_dir >>/coverage-report.htm
+
+workflows:
+  version: 2.1
+  rest_api:
+    jobs:
+      - build_api:
+          name: build-rest-api
+          api_base_dir: src/Portfolio.Api
+          api_tests_dir: src/Portfolio.Tests
+          dotnet_version: "3.1.100"
