Update CI Config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ jobs:
           working_directory: << parameters.api_base_dir >>
       - codecov/upload:
           token: CODECOV_TOKEN
+          file: << parameters.api_tests_dir >>
 
 workflows:
   version: 2.1
