--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,20 @@ jobs:
           working_directory: << parameters.api_tests_dir >>
       - run:
           name: Run Tests
-          command: dotnet test
+          command: dotnet test \
+                  /p:AltCover="true" \
+                  /p:AltCoverForce="true" \
+                  /p:AltCoverThreshold="80" \
+                  /p:AltCoverOpenCover="true" \
+                  /p:AltCoverXmlReport="coverage/opencover.xml" \
+                  /p:AltCoverInputDirectory="$api_project_dir" \
+                  /p:AltCoverAttributeFilter="ExcludeFromCodeCoverage" \
+                  /p:AltCoverAssemblyExcludeFilter="System(.*)|xunit|$test_project_dir|$api_project_dir.Views"
+
+                  dotnet reportgenerator \
+                  "-reports:coverage/opencover.xml" \
+                  "-reporttypes:Html;HtmlSummary" \
+                  "-targetdir:coverage/report"
           working_directory: << parameters.api_tests_dir >>
       - run:
           name: Run Build
