--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,19 +28,19 @@ jobs:
           working_directory: << parameters.api_tests_dir >>
       - run:
           name: Run Tests
-          command: dotnet test \
-                  /p:AltCover="true" \
-                  /p:AltCoverForce="true" \
-                  /p:AltCoverThreshold="80" \
-                  /p:AltCoverOpenCover="true" \
-                  /p:AltCoverXmlReport="coverage/opencover.xml" \
-                  /p:AltCoverInputDirectory=<< parameters.api_base_dir >> \
-                  /p:AltCoverAttributeFilter="ExcludeFromCodeCoverage" \
-                  /p:AltCoverAssemblyExcludeFilter="System(.*)|xunit|<< parameters.api_tests_dir >>|<< parameters.api_base_dir >>.Views" \
+          command: dotnet test
+                  /p:AltCover="true"
+                  /p:AltCoverForce="true"
+                  /p:AltCoverThreshold="80"
+                  /p:AltCoverOpenCover="true"
+                  /p:AltCoverXmlReport="coverage/opencover.xml"
+                  /p:AltCoverInputDirectory=<< parameters.api_base_dir >>
+                  /p:AltCoverAttributeFilter="ExcludeFromCodeCoverage"
+                  /p:AltCoverAssemblyExcludeFilter="System(.*)|xunit|<< parameters.api_tests_dir >>|<< parameters.api_base_dir >>.Views"
 
-                  dotnet reportgenerator \
-                  "-reports:coverage/opencover.xml" \
-                  "-reporttypes:Html;HtmlSummary" \
+                  dotnet reportgenerator
+                  "-reports:coverage/opencover.xml"
+                  "-reporttypes:Html;HtmlSummary"
                   "-targetdir:coverage/report"
           working_directory: << parameters.api_tests_dir >>
       - run:
