--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,10 +31,9 @@ jobs:
           command: dotnet test
                   /p:AltCover="true"
                   /p:AltCoverForce="true"
-                  /p:AltCoverThreshold="80"
                   /p:AltCoverOpenCover="true"
                   /p:AltCoverXmlReport="coverage/opencover.xml"
-                  /p:AltCoverInputDirectory="<< parameters.api_base_dir >>"
+                  /p:AltCoverInputDirectory="<< parameters.api_tests_dir >>"
                   /p:AltCoverAttributeFilter="ExcludeFromCodeCoverage"
                   /p:AltCoverAssemblyExcludeFilter="System(.*)|xunit|<< parameters.api_tests_dir >>|<< parameters.api_base_dir >>.Views"
 
