--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,21 +28,20 @@ jobs:
           working_directory: << parameters.api_tests_dir >>
       - run:
           name: Run Tests
-          command: dotnet test
-                  /p:AltCover="true"
-                  /p:AltCoverForce="true"
-                  /p:AltCoverOpenCover="true"
-                  /p:AltCoverXmlReport="coverage/opencover.xml"
-                  /p:AltCoverInputDirectory="<< parameters.api_base_dir >>"
-                  /p:AltCoverAttributeFilter="ExcludeFromCodeCoverage"
-                  /p:AltCoverAssemblyExcludeFilter="System(.*)|xunit|<< parameters.api_tests_dir >>|<< parameters.api_base_dir >>.Views"
+          command: dotnet tool install -g dotnet-reportgenerator-globaltool
+                   dotnet test
+                   /p:AltCover="true"
+                   /p:AltCoverForce="true"
+                   /p:AltCoverOpenCover="true"
+                   /p:AltCoverXmlReport="coverage/opencover.xml"
+                   /p:AltCoverInputDirectory="<< parameters.api_base_dir >>"
+                   /p:AltCoverAttributeFilter="ExcludeFromCodeCoverage"
+                   /p:AltCoverAssemblyExcludeFilter="System(.*)|xunit|<< parameters.api_tests_dir >>|<< parameters.api_base_dir >>.Views"
 
-                  dotnet tool install -g dotnet-reportgenerator-globaltool
-
-                  reportgenerator
-                  -reports:"<< parameters.api_tests_dir >>/coverage/opencover.xml"
-                  -targetdir:"coveragereport"
-                  -reporttypes:Html
+                   dotnet-reportgenerator-globaltool
+                   -reports:"<< parameters.api_tests_dir >>/coverage/opencover.xml"
+                   -targetdir:"coveragereport"
+                   -reporttypes:Html
           working_directory: << parameters.api_tests_dir >>
       - run:
           name: Run Build
