--- a/src/Portfolio.Tests/Portfolio.Tests.csproj
+++ b/src/Portfolio.Tests/Portfolio.Tests.csproj
@@ -4,6 +4,7 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AltCover" Version="6.7.750" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.19" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="NSubstitute" Version="4.2.2" />
@@ -19,5 +20,9 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Portfolio.Api\Portfolio.Api.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <DotNetCliToolReference Include="altcover.dotnet" Version="6.7.750" />
+    <DotNetCliToolReference Include="dotnet-reportgenerator-cli" Version="4.5.0" />
   </ItemGroup>
 </Project>
