--- a/src/Portfolio.Api/Portfolio.Api.csproj
+++ b/src/Portfolio.Api/Portfolio.Api.csproj
@@ -20,6 +20,10 @@
 		<PackageReference Include="AWSSDK.SimpleEmail" Version="3.7.0.184" />
 		<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.7" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.7">
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		  <PrivateAssets>all</PrivateAssets>
+		</PackageReference>
 		<PackageReference Include="NUlid" Version="1.7.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="6.4.0" />
