--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@docusaurus/core": "3.1.1",
     "@docusaurus/plugin-content-docs": "^3.1.1",
     "@docusaurus/preset-classic": "3.1.1",
+    "@giscus/react": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "axios": "^1.6.7",
     "clsx": "^2.0.0",
